// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Secret Manager Wizard should render form 1`] = `
<div>
  <div
    class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
  >
    <div
      class="StepWizard---navBarList--2ILN"
    >
      <span
        class="StepWizard---header--2qTm"
      >
        <span
          class="bp3-icon bp3-icon-lock StyledProps---main--1Wws"
          icon="lock"
        >
          <svg
            data-icon="lock"
            height="37"
            viewBox="0 0 20 20"
            width="37"
          >
            <desc>
              lock
            </desc>
            <path
              d="M15.93 9H14V4.99c0-2.21-1.79-4-4-4s-4 1.79-4 4V9H3.93c-.55 0-.93.44-.93.99v8c0 .55.38 1.01.93 1.01h12c.55 0 1.07-.46 1.07-1.01v-8c0-.55-.52-.99-1.07-.99zM8 9V4.99c0-1.1.9-2 2-2s2 .9 2 2V9H8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard---title--y0Q7 StepWizard---header--2qTm"
      >
        HashiCorp Vault
      </span>
      <div
        class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          1
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          2
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          HashiCorp Vault Details
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          3
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          VERIFY
        </p>
      </div>
    </div>
    <div
      class="StepWizard---stepDetails--Uaxx"
    >
       
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-xxlarge--zgL2 StyledProps---main--1Wws firstep"
      >
        <div
          class="heading"
        >
          HashiCorp Vault Overview
        </div>
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws connectorForm StyledProps---padding-small--3f0A"
        >
          <div
            class="OverlaySpinner---overlaySpinner--3Bs3"
          >
            <form
              class="FormikForm---main--1N87"
            >
              <div>
                <div
                  class="StyledProps---font--2ipy StyledProps---main--1Wws"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps---font--2ipy StyledProps---main--1Wws main"
                  >
                    <div
                      class="StyledProps---font--2ipy StyledProps---main--1Wws connectorFormNameWrapper"
                    >
                      <div
                        class="StyledProps---font--2ipy StyledProps---main--1Wws connectorFormNameElm"
                      >
                        <div
                          class="InputWithIdentifier---txtNameContainer--20iZ"
                        >
                          <div
                            class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
                          >
                            <p
                              class="StyledProps---font--2ipy StyledProps---main--1Wws"
                            >
                              ID
                              :
                            </p>
                            <span
                              class="InputWithIdentifier---idInput--w8_T"
                              contenteditable="true"
                            />
                            <span
                              class="bp3-icon bp3-icon-edit StyledProps---main--1Wws"
                              icon="edit"
                              style="vertical-align: middle;"
                            >
                              <svg
                                data-icon="edit"
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                              >
                                <desc>
                                  edit
                                </desc>
                                <path
                                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="bp3-form-group"
                            data-id="name-0"
                          >
                            <label
                              class="bp3-label"
                              for="name"
                            >
                              Name
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="name"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws"
                        style="justify-content: center;"
                      >
                        <p
                          class="StyledProps---font--2ipy StyledProps---main--1Wws fieldToggleLabel StyledProps---color--8PuS StyledProps---color-blue500--3HtV"
                        >
                          + Description
                        </p>
                        <p
                          class="StyledProps---font--2ipy StyledProps---main--1Wws fieldToggleLabel StyledProps---color--8PuS StyledProps---color-blue500--3HtV"
                        >
                          + Tags
                        </p>
                      </div>
                    </div>
                    <div
                      class="StyledProps---font--2ipy StyledProps---main--1Wws connectorFormElm"
                    >
                      
                    </div>
                  </div>
                </div>
                <div
                  class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
                >
                  <button
                    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        Save and Continue
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form 2`] = `
<div>
  <div
    class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
  >
    <div
      class="StepWizard---navBarList--2ILN"
    >
      <span
        class="StepWizard---header--2qTm"
      >
        <span
          class="bp3-icon bp3-icon-lock StyledProps---main--1Wws"
          icon="lock"
        >
          <svg
            data-icon="lock"
            height="37"
            viewBox="0 0 20 20"
            width="37"
          >
            <desc>
              lock
            </desc>
            <path
              d="M15.93 9H14V4.99c0-2.21-1.79-4-4-4s-4 1.79-4 4V9H3.93c-.55 0-.93.44-.93.99v8c0 .55.38 1.01.93 1.01h12c.55 0 1.07-.46 1.07-1.01v-8c0-.55-.52-.99-1.07-.99zM8 9V4.99c0-1.1.9-2 2-2s2 .9 2 2V9H8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard---title--y0Q7 StepWizard---header--2qTm"
      >
        HashiCorp Vault
      </span>
      <div
        class="StepWizard---navStep--2trN StepWizard---completedStep--3BLy"
      >
        <span
          class="StepWizard---completedIcon--yi-5"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey200--3A25"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN StepWizard---completedStep--3BLy"
      >
        <span
          class="StepWizard---completedIcon--yi-5"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey200--3A25"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          HashiCorp Vault Details
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          3
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          VERIFY
        </p>
      </div>
    </div>
    <div
      class="StepWizard---stepDetails--Uaxx"
    >
       
      <div
        class="Layout---vertical--3Szv StyledProps---main--1Wws StyledProps---padding-small--3f0A"
        style="height: 100%;"
      >
        <div
          class="Layout---vertical--3Szv StyledProps---main--1Wws"
        >
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-medium--2b-0 StyledProps---color--8PuS StyledProps---color-grey700--WvM3 StyledProps---padding-right-small--2ldZ StyledProps---padding-left-small--ODrE"
          >
            Verify Connection to 
             
            <span
              class="name"
            >
              dummyname
            </span>
          </p>
          <div
            class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws StepsProgress---stepsProgress--2IQh"
            id="steps-progress"
          >
            <div
              class="StepsProgress---progressBar--2_Dp"
            >
              <div
                class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress---progressHeight--3zU4"
              >
                <div
                  class="bp3-progress-meter"
                  style="width: 33.33333333333333%;"
                />
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
            >
              <div
                class="StepsProgress---stepWrap--g0bN"
              >
                <span
                  class="bp3-icon bp3-icon-error StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-red500--uX9L StyledProps---margin-right-small--Uojv"
                  icon="error"
                >
                  <svg
                    data-icon="error"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      error
                    </desc>
                    <path
                      d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws"
                  style=""
                >
                  Checking for delegates 
                </p>
              </div>
              <div
                class="StepsProgress---stepWrap--g0bN"
              >
                <span
                  class="bp3-icon bp3-icon-blank StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-yellow500--1TpH StyledProps---margin-right-small--Uojv"
                  icon="blank"
                >
                  <svg
                    data-icon="blank"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      blank
                    </desc>
                  </svg>
                </span>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws"
                  style="font-weight: normal;"
                >
                  Establishing Connection between Delegate and HashiCorp Vault
                </p>
              </div>
              <div
                class="StepsProgress---stepWrap--g0bN"
              >
                <span
                  class="bp3-icon bp3-icon-blank StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-yellow500--1TpH StyledProps---margin-right-small--Uojv"
                  icon="blank"
                >
                  <svg
                    data-icon="blank"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      blank
                    </desc>
                  </svg>
                </span>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws"
                  style="font-weight: normal;"
                >
                  Verifying Connection
                </p>
              </div>
            </div>
          </div>
          <div
            class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---margin-left-small--3XL_"
          >
            <button
              class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi StyledProps---padding-left-large--28UT StyledProps---margin-top-small--1_l5 StyledProps---font-size-small--3cA6"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                RETEST CONNECTION
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form in edit 1`] = `
<div>
  <div
    class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
  >
    <div
      class="StepWizard---navBarList--2ILN"
    >
      <span
        class="StepWizard---header--2qTm"
      >
        <span
          class="bp3-icon bp3-icon-lock StyledProps---main--1Wws"
          icon="lock"
        >
          <svg
            data-icon="lock"
            height="37"
            viewBox="0 0 20 20"
            width="37"
          >
            <desc>
              lock
            </desc>
            <path
              d="M15.93 9H14V4.99c0-2.21-1.79-4-4-4s-4 1.79-4 4V9H3.93c-.55 0-.93.44-.93.99v8c0 .55.38 1.01.93 1.01h12c.55 0 1.07-.46 1.07-1.01v-8c0-.55-.52-.99-1.07-.99zM8 9V4.99c0-1.1.9-2 2-2s2 .9 2 2V9H8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard---title--y0Q7 StepWizard---header--2qTm"
      >
        HashiCorp Vault
      </span>
      <div
        class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          1
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          2
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          HashiCorp Vault Details
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          3
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          VERIFY
        </p>
      </div>
    </div>
    <div
      class="StepWizard---stepDetails--Uaxx"
    >
       
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-xxlarge--zgL2 StyledProps---main--1Wws firstep"
      >
        <div
          class="heading"
        >
          HashiCorp Vault Overview
        </div>
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws connectorForm StyledProps---padding-small--3f0A"
        >
          <div
            class="OverlaySpinner---overlaySpinner--3Bs3"
          >
            <form
              class="FormikForm---main--1N87"
            >
              <div>
                <div
                  class="StyledProps---font--2ipy StyledProps---main--1Wws"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps---font--2ipy StyledProps---main--1Wws main"
                  >
                    <div
                      class="StyledProps---font--2ipy StyledProps---main--1Wws connectorFormNameWrapper"
                    >
                      <div
                        class="StyledProps---font--2ipy StyledProps---main--1Wws connectorFormNameElm"
                      >
                        <div
                          class="InputWithIdentifier---txtNameContainer--20iZ"
                        >
                          <div
                            class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
                          >
                            <p
                              class="StyledProps---font--2ipy StyledProps---main--1Wws"
                            >
                              ID
                              :
                            </p>
                            <span
                              class="InputWithIdentifier---idInput--w8_T"
                              contenteditable="false"
                              disabled=""
                            >
                              sm14
                            </span>
                          </div>
                          <div
                            class="bp3-form-group"
                            data-id="name-0"
                          >
                            <label
                              class="bp3-label"
                              for="name"
                            >
                              Name
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="name"
                                  type="text"
                                  value="sm14"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws"
                        style="justify-content: center;"
                      >
                        <p
                          class="StyledProps---font--2ipy StyledProps---main--1Wws fieldToggleLabel StyledProps---color--8PuS StyledProps---color-blue500--3HtV"
                        >
                          + Tags
                        </p>
                      </div>
                    </div>
                    <div
                      class="StyledProps---font--2ipy StyledProps---main--1Wws connectorFormElm"
                    >
                      <div
                        class="bp3-form-group expandedDescription"
                        data-id="description-1"
                      >
                        <label
                          class="bp3-label"
                          for="description"
                        >
                          <div
                            class="StyledProps---font--2ipy StyledProps---main--1Wws headerRow"
                          >
                            <span
                              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52"
                            >
                              Description
                            </span>
                            <span
                              class="StyledProps---font--2ipy StyledProps---main--1Wws fieldToggleLabel StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-blue500--3HtV"
                            >
                              remove
                            </span>
                          </div>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <textarea
                            autocomplete="off"
                            class="bp3-input bp3-fill"
                            name="description"
                          >
                            asd
                          </textarea>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
                >
                  <button
                    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        Save and Continue
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form in edit 2`] = `
<div>
  <div
    class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
  >
    <div
      class="StepWizard---navBarList--2ILN"
    >
      <span
        class="StepWizard---header--2qTm"
      >
        <span
          class="bp3-icon bp3-icon-lock StyledProps---main--1Wws"
          icon="lock"
        >
          <svg
            data-icon="lock"
            height="37"
            viewBox="0 0 20 20"
            width="37"
          >
            <desc>
              lock
            </desc>
            <path
              d="M15.93 9H14V4.99c0-2.21-1.79-4-4-4s-4 1.79-4 4V9H3.93c-.55 0-.93.44-.93.99v8c0 .55.38 1.01.93 1.01h12c.55 0 1.07-.46 1.07-1.01v-8c0-.55-.52-.99-1.07-.99zM8 9V4.99c0-1.1.9-2 2-2s2 .9 2 2V9H8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard---title--y0Q7 StepWizard---header--2qTm"
      >
        HashiCorp Vault
      </span>
      <div
        class="StepWizard---navStep--2trN StepWizard---completedStep--3BLy"
      >
        <span
          class="StepWizard---completedIcon--yi-5"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey200--3A25"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          2
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          HashiCorp Vault Details
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          3
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          VERIFY
        </p>
      </div>
    </div>
    <div
      class="StepWizard---stepDetails--Uaxx"
    >
       
      <div
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-top-medium--29t2"
        style="width: 64%;"
      >
        <p
          class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---padding-bottom-xlarge--1Far"
        >
          Configure
        </p>
        <div
          class="OverlaySpinner---overlaySpinner--3Bs3"
        >
          <form
            class="FormikForm---main--1N87"
          >
            <div>
              <div
                class="bp3-form-group"
                data-id="vaultUrl-0"
              >
                <label
                  class="bp3-label"
                  for="vaultUrl"
                >
                  Vault URL
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="vaultUrl"
                      type="text"
                      value="http://localhost:8200"
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="basePath-1"
              >
                <label
                  class="bp3-label"
                  for="basePath"
                >
                  Base Secret Path (optional)
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="basePath"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="accessType-2"
              >
                <label
                  class="bp3-label"
                  for="accessType"
                >
                  Authentication
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio---radio--3bxG"
                    >
                      <input
                        checked=""
                        name="accessType"
                        type="radio"
                        value="APP_ROLE"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      App Role
                    </label>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio---radio--3bxG"
                    >
                      <input
                        name="accessType"
                        type="radio"
                        value="TOKEN"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Token
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws"
              >
                <div
                  class="bp3-form-group"
                  data-id="appRoleId-3"
                >
                  <label
                    class="bp3-label"
                    for="appRoleId"
                  >
                    App Role ID
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="appRoleId"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="secretId-4"
                >
                  <label
                    class="bp3-label"
                    for="secretId"
                  >
                    Secret ID
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="secretId"
                        type="password"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="engineType-5"
              >
                <label
                  class="bp3-label"
                  for="engineType"
                >
                  Secret Engine
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio---radio--3bxG"
                    >
                      <input
                        checked=""
                        name="engineType"
                        type="radio"
                        value="fetch"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Fetch Engines
                    </label>
                    <label
                      class="bp3-control bp3-radio bp3-inline Radio---radio--3bxG"
                    >
                      <input
                        name="engineType"
                        type="radio"
                        value="manual"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Manually Configure Engine
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws"
              >
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="secretEngine-6"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select---main--1QpB bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="secretEngine"
                            placeholder="Search..."
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws StyledProps---padding-small--3f0A"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="bp3-button bp3-disabled StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi StyledProps---margin-top-xsmall--33hS"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Fetch Engines
                  </span>
                </button>
              </div>
              <div
                class="bp3-form-group"
                data-id="renewIntervalHours-7"
              >
                <label
                  class="bp3-label"
                  for="renewIntervalHours"
                >
                  Renewal Interval (hours)
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="renewIntervalHours"
                      type="text"
                      value="10"
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="readOnly-8"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-control bp3-checkbox StyledProps---font--2ipy Checkbox---checkbox--2kFy StyledProps---main--1Wws StyledProps---padding-left-xxlarge--1LeG StyledProps---inline--1f52"
                  >
                    <input
                      name="readOnly"
                      type="checkbox"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Read-only Vault
                  </label>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="default-9"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-control bp3-checkbox StyledProps---font--2ipy Checkbox---checkbox--2kFy StyledProps---main--1Wws StyledProps---padding-left-xxlarge--1LeG StyledProps---inline--1f52"
                  >
                    <input
                      name="default"
                      type="checkbox"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Use as Default Secrets Manager
                  </label>
                </div>
              </div>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws"
              >
                <button
                  class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Back
                  </span>
                </button>
                <button
                  class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Continue
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form in edit 3`] = `
<div>
  <div
    class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
  >
    <div
      class="StepWizard---navBarList--2ILN"
    >
      <span
        class="StepWizard---header--2qTm"
      >
        <span
          class="bp3-icon bp3-icon-lock StyledProps---main--1Wws"
          icon="lock"
        >
          <svg
            data-icon="lock"
            height="37"
            viewBox="0 0 20 20"
            width="37"
          >
            <desc>
              lock
            </desc>
            <path
              d="M15.93 9H14V4.99c0-2.21-1.79-4-4-4s-4 1.79-4 4V9H3.93c-.55 0-.93.44-.93.99v8c0 .55.38 1.01.93 1.01h12c.55 0 1.07-.46 1.07-1.01v-8c0-.55-.52-.99-1.07-.99zM8 9V4.99c0-1.1.9-2 2-2s2 .9 2 2V9H8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard---title--y0Q7 StepWizard---header--2qTm"
      >
        HashiCorp Vault
      </span>
      <div
        class="StepWizard---navStep--2trN StepWizard---completedStep--3BLy"
      >
        <span
          class="StepWizard---completedIcon--yi-5"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey200--3A25"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN StepWizard---completedStep--3BLy"
      >
        <span
          class="StepWizard---completedIcon--yi-5"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey200--3A25"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          HashiCorp Vault Details
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          3
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          VERIFY
        </p>
      </div>
    </div>
    <div
      class="StepWizard---stepDetails--Uaxx"
    >
       
      <div
        class="Layout---vertical--3Szv StyledProps---main--1Wws StyledProps---padding-small--3f0A"
        style="height: 100%;"
      >
        <div
          class="Layout---vertical--3Szv StyledProps---main--1Wws"
        >
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-medium--2b-0 StyledProps---color--8PuS StyledProps---color-grey700--WvM3 StyledProps---padding-right-small--2ldZ StyledProps---padding-left-small--ODrE"
          >
            Verify Connection to 
             
            <span
              class="name"
            >
              dummyname
            </span>
          </p>
          <div
            class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws StepsProgress---stepsProgress--2IQh"
            id="steps-progress"
          >
            <div
              class="StepsProgress---progressBar--2_Dp"
            >
              <div
                class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress---progressHeight--3zU4"
              >
                <div
                  class="bp3-progress-meter"
                  style="width: 33.33333333333333%;"
                />
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
            >
              <div
                class="StepsProgress---stepWrap--g0bN"
              >
                <span
                  class="bp3-icon bp3-icon-error StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-red500--uX9L StyledProps---margin-right-small--Uojv"
                  icon="error"
                >
                  <svg
                    data-icon="error"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      error
                    </desc>
                    <path
                      d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws"
                  style=""
                >
                  Checking for delegates 
                </p>
              </div>
              <div
                class="StepsProgress---stepWrap--g0bN"
              >
                <span
                  class="bp3-icon bp3-icon-blank StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-yellow500--1TpH StyledProps---margin-right-small--Uojv"
                  icon="blank"
                >
                  <svg
                    data-icon="blank"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      blank
                    </desc>
                  </svg>
                </span>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws"
                  style="font-weight: normal;"
                >
                  Establishing Connection between Delegate and HashiCorp Vault
                </p>
              </div>
              <div
                class="StepsProgress---stepWrap--g0bN"
              >
                <span
                  class="bp3-icon bp3-icon-blank StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-yellow500--1TpH StyledProps---margin-right-small--Uojv"
                  icon="blank"
                >
                  <svg
                    data-icon="blank"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      blank
                    </desc>
                  </svg>
                </span>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws"
                  style="font-weight: normal;"
                >
                  Verifying Connection
                </p>
              </div>
            </div>
          </div>
          <div
            class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---margin-left-small--3XL_"
          >
            <button
              class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi StyledProps---padding-left-large--28UT StyledProps---margin-top-small--1_l5 StyledProps---font-size-small--3cA6"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                RETEST CONNECTION
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
